<resources>
    <string name="app_name">Hike App</string>

    <!-- Add Hike Activity Strings -->
    <string name="hike_name">Name of hike</string>
    <string name="location">Location</string>
    <string name="date_of_hike">Date of hike</string>
    <string name="parking_available">Parking available:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="length_km">Length (km)</string>
    <string name="difficulty">Difficulty:</string>
    <string name="description_optional">Description (optional)</string>
    <string name="weather_condition">Weather condition:</string>
    <string name="elevation_gain">Elevation gain (m)</string>
    <string name="save_hike">Save Hike</string>
    <string name="reset_database_confirmation">Are you sure you want to reset the entire database? This action cannot be undone.</string>
    <string name="delete_hike_confirmation">Are you sure you want to delete \"%s\"?</string>
    <string name="no_hikes_message">No hikes recorded yet. Tap \'+\' to add your first hike!</string>
    <string name="reset_database">Reset Database</string>
    <string name="delete_hike">Delete Hike</string>
    <string name="edit_observation">Edit Observation</string>
    <string name="observation_text">Observation</string>
    <string name="observation_time">Time</string>
    <string name="observation_comment">Comment (optional)</string>
    <string name="save_changes">💾 Save Changes</string>
    <string name="delete_observation">🗑 Delete Observation</string>

</resources>